--- a/week06/my-app/package.json
+++ b/week06/my-app/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "mongodb": "^7.0.0",
     "next": "16.0.1",
     "react": "19.2.0",
