--- a/week06/my-app/package.json
+++ b/week06/my-app/package.json
@@ -9,11 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "axios": "^1.13.2",
     "mongodb": "^7.0.0",
     "next": "16.0.1",
+    "postcss": "^8.5.6",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -21,6 +24,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "typescript": "^5"
   }
 }
