--- a/week06/my-app/package.json
+++ b/week06/my-app/package.json
@@ -25,6 +25,8 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "typescript": "^5"
   }
 }
