--- a/week07/my-app/package.json
+++ b/week07/my-app/package.json
@@ -9,9 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@tailwindcss/postcss": "^4.1.17",
     "axios": "^1.13.2",
-    "mongodb": "^7.0.0",
+    "mongodb": "^5.9.2",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "postcss": "^8.5.6",
