--- a/week07/my-app/package.json
+++ b/week07/my-app/package.json
@@ -12,6 +12,7 @@
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@tailwindcss/postcss": "^4.1.17",
     "axios": "^1.13.2",
+    "bcrypt": "^6.0.0",
     "mongodb": "^5.9.2",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
@@ -21,6 +22,7 @@
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
